# techresources

./: .gitignore  README.md  RESOURCES.md  pyproject.toml
01_Prompt_Engineering_Layer/: README.md  challenge.py  prompt_engineering_layer.ipynb
01_Prompt_Engineering_Layer/solution/: prompting.py
02_Embeddings_and_RAG/: README.md  challenge.py
02_Embeddings_and_RAG/solution/: rag.py
03_Core_Agent_Anatomy/: README.md  challenge.py  core_agent_anatomy.ipynb
03_Core_Agent_Anatomy/solution/: agent.py
04_Agent_Quality_and_Observability/: README.md  agent_quality_and_observability.ipynb  challenge.py
04_Agent_Quality_and_Observability/solution/: observability.py
09_Defensive_Engineering/: README.md
